# reqres-tests

./: pyproject.toml
reqres_tests/schemas/: account.py  resources.py  users.py
tests/: test_account.py  test_resources.py  test_users.py
